--- a/client/src/components/QuestPanel.css
+++ b/client/src/components/QuestPanel.css
@@ -8,6 +8,8 @@
   min-height: 0;
   display: flex;
   flex-direction: column;
+  scrollbar-width: thin;
+  scrollbar-color: #555 #1a1a1a;
 }
 
 .quest-panel h2 {
